Fixed spacing issue in mobile device

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -153,11 +153,22 @@
   /* book collection */
   .book_collection_section{
     margin: 0px 10px;
-    margin-top: 120px;
+    margin-top: 100px;
+  }
+
+
+
+  /* our products */
+  .our_products_section{
+    margin-top: 80px;
   }
 
   .our_products_section .section_title{
-    font-size: 30px;
+    font-size: 20px;
+  }
+
+  .our_products_section .section_subtitle{
+    margin-top: -10px;
   }
 
   .book_collection_1,.book_collection_2{
@@ -171,6 +182,10 @@
 
 
   /* testimonial */
+  .testimonial_section{
+    margin-top: 80px;
+  }
+
   .testimonial_text{
     width: 100%;
   }
@@ -182,8 +197,12 @@
 
 
   /* featured collection */
+  .featuredBook_collection{
+    margin-top: 80px;
+  }
+
   .featuredBook_collection .section_title{
-    font-size: 30px;
+    font-size: 20px;
   }
 
   .first_row_images,.second_row_images{
@@ -195,7 +214,7 @@
   /* book list */
   .book_list_section{
     margin: 0 10px;
-    margin-top: 120px;
+    margin-top: 80px;
   }
 
   .divider{
@@ -203,13 +222,28 @@
     margin-bottom: 60px;
   }
 
+  .special,.latest,.top {
+    font-size: 25px;
+  }
+
+  /* feature_section */
+  .feature_section{
+    margin-top: 40px;
+  }
+
   /* blog section */
   .blog_section .section_title{
-    font-size: 30px
+    font-size: 20px
+  }
+
+  .blog_section .section_subtitle{
+    margin-top: -10px;
+    margin-bottom: 30px;
   }
 
   .blog_section{
     margin: 0 10px;
+    margin-top: 60px;
   }
 
 
@@ -219,7 +253,7 @@
   }
 
   .newsletter_section .section_title{
-    font-size: 30px;
+    font-size: 20px;
   }
 
   .newsletter_section .subs_text{
@@ -249,6 +283,10 @@
 
 
   /* footer */
+  .footer_section .siteLogo{
+    width: 40%;
+  }
+
   .footer_timing_menu{
     margin-left: 0px;
   }
@@ -399,11 +437,11 @@
   /* book collection */
   .book_collection_section{
     margin: 0px 10px;
-    margin-top: 120px;
+    margin-top: 100px;
   }
 
   .our_products_section .section_title{
-    font-size: 30px;
+    font-size: 20px;
   }
 
   .book_collection_1,.book_collection_2{
@@ -428,7 +466,7 @@
 
   /* featured collection */
   .featuredBook_collection .section_title{
-    font-size: 30px;
+    font-size: 20px;
   }
 
   .first_row_images,.second_row_images{
@@ -439,7 +477,7 @@
   /* book list */
   .book_list_section{
     margin: 0 10px;
-    margin-top: 120px;
+    margin-top: 80px;
   }
 
 
@@ -448,9 +486,15 @@
     margin-bottom: 60px;
   }
 
+  .special,.latest,.top {
+    font-size: 20px;
+  }
+
+
+
   /* blog section */
   .blog_section .section_title{
-    font-size: 30px
+    font-size: 20px;
   }
 
   .blog_section{
@@ -464,7 +508,7 @@
   }
 
   .newsletter_section .section_title{
-    font-size: 30px
+    font-size: 20px
   }
 
 
@@ -654,7 +698,7 @@
   /* book collection */
   .book_collection_section{
     margin: 0px 10px;
-    margin-top: 120px;
+    margin-top: 100px;
   }
 
   .book_collection_1,.book_collection_2{
@@ -678,7 +722,7 @@
 
   /* featured collection */
   .featuredBook_collection .section_title{
-    font-size: 30px;
+    font-size: 20px;
   }
 
   .first_row_images,.second_row_images{
@@ -693,7 +737,7 @@
 
   /* blog section */
   .blog_section .section_title{
-    font-size: 30px
+    font-size: 20px
   }
 
   .blog_section{
@@ -707,7 +751,7 @@
   }
 
   .newsletter_section .section_title{
-    font-size: 30px
+    font-size: 20px
   }
 
 
@@ -787,7 +831,7 @@
 
   /* blog section */
   .blog_section .section_title{
-    font-size: 30px
+    font-size: 20px
   }
 
   .blog_section{
@@ -801,7 +845,7 @@
   }
 
   .newsletter_section .section_title{
-    font-size: 30px;
+    font-size: 20px;
   }
 
 
