--- a/css/style.css
+++ b/css/style.css
@@ -64,19 +64,19 @@ a{
   --primary_color: #333333;
 }
 
-/* PRELOADER BACKGROUND */
+/* preloader */
 #preloader{
   position: fixed;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999;
+  z-index: 50;
 }
 
-.book-loader{
+.book_loader{
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -130,7 +130,7 @@ a{
 }
 
 /* loading text */
-.loading-text{
+.loading_text{
   margin-top:20px;
   font-size:14px;
   letter-spacing:2px;
@@ -147,7 +147,7 @@ a{
   position:fixed;
   bottom:20px;
   right:20px;
-  z-index:50;
+  z-index:40;
   cursor:pointer;
   background:#00bfc5;
   color:white;
@@ -503,6 +503,7 @@ a{
 /* book collection style */
 .book_collection_section{
   margin-top: 120px;
+  z-index: 0;
 }
 
 .book_img{
